# tomfuns

./: README.md  pyproject.toml
src/tomfuns/: __init__.py
src/tomfuns/analysis/: __init__.py  _analysis.py
src/tomfuns/models/: __init__.py  _models.py
src/tomfuns/plotting/: __init__.py  _plotting.py
src/tomfuns/stimuli/: __init__.py  _stimuli.py
src/tomfuns/utils/: __init__.py  _utils.py
