[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tomfuns_tomstoll"
version = "0.0.1"
authors = [
  { name="Thomas Stoll", email="tomstoll@med.umich.edu" },
]
description = "A collection of useful functions for EEG analysis and plotting in the Maddox lab."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"