[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tomfuns"]

[project]
name = "tomfuns"
version = "0.0.1"
authors = [
  { name="Thomas Stoll", email="tomstoll@med.umich.edu" },
]
description = "A collection of useful functions for EEG analysis and plotting in the Maddox lab."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "scipy",
    "mne",
	"matplotlib"
]

[project.optional-dependencies]
models = [
    "pyzbc2014"
]

[project.urls]
Homepage = "https://github.com/tomstoll/tomfuns"
Issues = "https://github.com/tomstoll/tomfuns/issues"